--- a/css/index.css
+++ b/css/index.css
@@ -92,6 +92,13 @@ main {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.274);
 }
 
+.login-imagem {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.75rem;
+}
+
 .login-imagem img {
     width: 4.375rem;
     height: 4.375rem;
