--- a/css/calendario.css
+++ b/css/calendario.css
@@ -86,7 +86,7 @@ main {
 }
 
 .calendario {
-    width: 450px;
+    width: 22rem;
     display: flex;
     flex-direction: column;
     background-color: #fafafa;
