--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
@@ -9,11 +9,7 @@
 
 body {
     background-color: #bbf1d0;
-    font-family: "Poppins", sans-serif;
-}
-
-ion-icon {
-    font-size: 2.5rem;
+    font-family: sans-serif;
 }
 
 .cabecalho {
@@ -67,6 +63,7 @@ ion-icon {
     color: #141414;
     font-family: "Inter";
     text-decoration: none;
+    text-align: center;
     padding: 0.625rem;
     border-bottom: 2px solid transparent;
 }
@@ -106,8 +103,8 @@ main {
 }
 
 .cabecalho-icones ion-icon {
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 2.375rem;
+    width: 2.375rem;
     margin: 0 0.125rem;
     cursor: pointer;
     color: #cccccc;
