--- a/css/account.css
+++ b/css/account.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: #bbf1d0;
-    font-family: sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 .cabecalho {
@@ -61,7 +61,6 @@ body {
 
 .menu-item {
     color: #141414;
-    font-family: "Inter";
     text-decoration: none;
     text-align: center;
     padding: 0.625rem;
@@ -82,68 +81,155 @@ main {
     border-top: 0.4px solid #141414;
 }
 
-.conteudo-acesso {
+.conteudo {
+    max-width: 80vw;
+    display: flex;
+    flex-direction: row;
+    border-radius: 0.75rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+}
+
+.conteudo-imagem {
     background-image: linear-gradient(#1aa37a, #9dffb3);
+    width: 50%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    padding: 2.25rem;
-    gap: 1.25rem;
-    border-radius: 12px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.274);
+    padding: 2rem;
+    border-top-left-radius: 0.75rem;
+    border-bottom-left-radius: 0.75rem;
 }
 
-.acesso-imagem {
+.conteudo-imagem img {
+    width: 31rem;
+}
+
+.conteudo-formulario {
+    background-color: #fafafa;
+    width: 50%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 0.75rem;
+    padding: 2rem;
+    border-top-right-radius: 0.75rem;
+    border-bottom-right-radius: 0.75rem;
 }
 
-.acesso-imagem img {
-    width: 4.375rem;
-    height: 4.375rem;
-}
-
-.acesso-imagem h3 {
-    color: #141414;
-}
-
-.acesso-formulario {
+.conteudo-formulario form {
     display: flex;
     flex-direction: column;
-    gap: 0.625rem;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
+.formulario-titulo {
+    text-align: center;
+}
+
+.formulario-titulo h3 {
+    color: #2e2e2e;
+}
+
+.formulario-entrada {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
     width: 100%;
 }
 
-.acesso-formulario div {
+.entrada-box {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
 }
 
-.acesso-formulario input {
+.entrada-box input {
     background-color: #fafafa;
     color: #141414;
     border: none;
-    height: 2.875rem;
+    height: 2.5rem;
     outline: none;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     padding-left: 0.625rem;
     font-size: 0.875rem;
-    width: 100%;
+    box-shadow: 1px 1px 6px #00000050;
 }
 
-.acesso-formulario [type=submit] {
+.entrada-box input:focus-visible {
+    outline: 1px solid #cd426a;
+}
+
+.entrada-box label {
+    font-size: 0.875rem;
+}
+
+.formulario-envio input {
     background-color: #cd426a;
     color: #fafafa;
     font-size: 1rem;
+    border-radius: 0.5rem;
+    padding: 0 0.75rem;
+    border: none;
+    height: 2.5rem;
+    outline: none;
     text-transform: uppercase;
+    cursor: pointer;
+    text-align: center;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.eye {
+    font-size: 1.5rem;
     cursor: pointer;
 }
 
-.acesso-descricao {
+#eye-on {
+    display: none;
+}
+
+#eye-off {
+    display: none;
+}
+
+@media screen and (min-width: 0) and (max-width: 768px) {
+    .conteudo-imagem {
+        display: none;
+    }
+
+    .conteudo-formulario {
+        width: inherit;
+        border-top-left-radius: 0.75rem;
+        border-bottom-left-radius: 0.75rem;
+    }
+
+    .formulario-entrada {
+        flex-direction: column;
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1110px) {
+    .formulario-entrada {
+        flex-direction: column;
+    }
+}
+
+/* .acesso-descricao {
     color: #141414;
 }
 
@@ -163,34 +249,4 @@ main {
     color: #ce0941;
     text-decoration: underline #ce0941 2px;
     text-underline-offset: 0.25rem;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-.acesso-msg {
-    text-align: center;
-    color: #141414;
-    padding: 10px;
-    display: none;
-}
-
-.eye {
-    font-size: 1.5rem;
-    cursor: pointer;
-}
-
-#eye-on {
-    display: block;
-}
-
-#eye-off {
-    display: none;
-}
+} */
