--- a/css/calendar.css
+++ b/css/calendar.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: #bbf1d0;
-    font-family: sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 .cabecalho {
@@ -47,7 +47,7 @@ body {
 }
 
 .cabecalho-ham ion-icon {
-    color: #141414;
+    color: #1c1d1f;
     width: 3rem;
     height: 3rem;
     cursor: pointer;
@@ -60,8 +60,7 @@ body {
 }
 
 .menu-item {
-    color: #141414;
-    font-family: "Inter";
+    color: #1c1d1f;
     text-decoration: none;
     text-align: center;
     padding: 0.625rem;
@@ -70,7 +69,7 @@ body {
 
 .menu-item:hover {
     transition: 0.3s;
-    border-bottom: 2px solid #141414;
+    border-bottom: 2px solid #1c1d1f;
 }
 
 main {
@@ -79,7 +78,7 @@ main {
     height: 85vh;
     justify-content: center;
     align-items: center;
-    border-top: 0.4px solid #141414;
+    border-top: 0.4px solid #1c1d1f;
 }
 
 .calendario {
@@ -145,7 +144,7 @@ main {
 }
 
 .calendario-conteudo li {
-    color: #141414;
+    color: #1c1d1f;
     width: calc(100% / 7);
     font-size: 1.125rem;
 }
