--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@
 
 body {
     background-color: #bbf1d0;
-    font-family: sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 .cabecalho {
@@ -47,7 +47,7 @@ body {
 }
 
 .cabecalho-ham ion-icon {
-    color: #141414;
+    color: #1c1d1f;
     width: 3rem;
     height: 3rem;
     cursor: pointer;
@@ -60,8 +60,7 @@ body {
 }
 
 .menu-item {
-    color: #141414;
-    font-family: "Inter";
+    color: #1c1d1f;
     text-decoration: none;
     text-align: center;
     padding: 0.625rem;
@@ -70,7 +69,7 @@ body {
 
 .menu-item:hover {
     transition: 0.3s;
-    border-bottom: 2px solid #141414;
+    border-bottom: 2px solid #1c1d1f;
 }
 
 main {
@@ -79,7 +78,7 @@ main {
     height: 85vh;
     justify-content: center;
     align-items: center;
-    border-top: 0.4px solid #141414;
+    border-top: 0.4px solid #1c1d1f;
 }
 
 .conteudo-login {
@@ -89,7 +88,7 @@ main {
     align-items: center;
     padding: 2.25rem;
     gap: 1.25rem;
-    border-radius: 12px;
+    border-radius: 0.75rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.274);
 }
 
@@ -106,7 +105,8 @@ main {
 }
 
 .login-imagem h3 {
-    color: #141414;
+    font-size: 1rem;
+    color: #1c1d1f;
 }
 
 .login-formulario {
@@ -118,11 +118,11 @@ main {
 
 .login-formulario input {
     background-color: #fafafa;
-    color: #141414;
+    color: #1c1d1f;
     border: none;
     height: 2.875rem;
     outline: none;
-    border-radius: 8px;
+    border-radius: 0.5rem;
     padding-left: 0.625rem;
     font-size: 0.875rem;
 }
@@ -135,8 +135,12 @@ main {
     cursor: pointer;
 }
 
+.login-formulario [type=submit]:hover {
+    background-color: #cf2454;
+}
+
 .login-descricao {
-    color: #141414;
+    color: #1c1d1f;
 }
 
 .login-descricao a {
