--- a/css/responsive-menu.css
+++ b/css/responsive-menu.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 0) and (max-width: 768px) {
+@media screen and (min-width: 0) and (max-width: 48em) {
     .cabecalho {
         flex-direction: column;
         align-items: initial;
@@ -13,7 +13,7 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        padding: 0.625rem;
+        padding: 0.25rem;
         border-bottom: 0.4px solid #1c1d1f;
     }
 
