--- a/css/responsive-menu.css
+++ b/css/responsive-menu.css
@@ -13,7 +13,7 @@
         display: flex;
         flex-direction: row;
         justify-content: flex-end;
-        padding: 0.25rem;
+        padding: 0.25rem 0.75rem;
         border-bottom: 0.4px solid #1c1d1f;
     }
 
