--- a/css/index.css
+++ b/css/index.css
@@ -146,7 +146,7 @@ main {
     width: 100%;
 }
 
-.login-formulario [type=submit] {
+.formulario-envio input {
     background-color: #cd426a;
     height: 2.75rem;
     color: #fafafa;
@@ -158,7 +158,7 @@ main {
     width: 100%;
 }
 
-.login-formulario [type=submit]:hover {
+.formulario-envio input:hover {
     background-color: #cf2454;
 }
 
