--- a/css/calendar.css
+++ b/css/calendar.css
@@ -82,7 +82,7 @@ main {
 }
 
 .calendario {
-    width: 22rem;
+    max-width: 22rem;
     display: flex;
     flex-direction: column;
     background-color: #fafafa;
@@ -188,4 +188,39 @@ main {
 
 .conteudo-dias li:not(.active):hover::before {
     background-color: #fafafa;
+}
+
+.conteudo-dias li.active:hover::before {
+    background-color: #cd426a;
+}
+
+.conteudo-dias li.active:hover {
+    background-color: #cd426a;
+}
+
+.atividades {
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    padding: 1.25rem;
+}
+
+section {
+    display: flex;
+    flex-direction: row;
+    background-image: linear-gradient(#1aa37a, #9dffb3);
+    padding: 1.25rem;
+    gap: 1.25rem;
+    max-height: 70vh;
+    max-width: 80vw;
+    border-radius: 0.75rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+}
+
+@media screen and (min-width: 0) and (max-width: 48em) {
+    section {
+        flex-direction: column;
+    }
+
+
 }
