--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 * {
@@ -10,6 +8,7 @@
 body {
     background-color: #bbf1d0;
     font-family: "Inter", sans-serif;
+    color: #1c1d1f;
 }
 
 .cabecalho {
@@ -75,8 +74,8 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    height: 85vh;
     justify-content: center;
+    padding-top: 1.5rem;
     align-items: center;
     border-top: 0.4px solid #1c1d1f;
 }
@@ -162,6 +161,8 @@ main {
 }
 
 @media screen and (min-width: 0) and (max-width: 48em) {
+
+
     .container {
         gap: 2rem;
     }
