--- a/css/about-us.css
+++ b/css/about-us.css
@@ -63,12 +63,12 @@ body {
     text-decoration: none;
     text-align: center;
     padding: 0.625rem;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.125rem solid transparent;
 }
 
 .menu-item:hover {
     transition: 0.3s;
-    border-bottom: 2px solid #1c1d1f;
+    border-bottom: 0.125rem solid #1c1d1f;
 }
 
 main {
