--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 * {
@@ -10,6 +8,7 @@
 body {
     background-color: #bbf1d0;
     font-family: "Inter", sans-serif;
+    color: #1c1d1f;
 }
 
 .cabecalho {
@@ -64,19 +63,19 @@ body {
     text-decoration: none;
     text-align: center;
     padding: 0.625rem;
-    border-bottom: 2px solid transparent;
+    border-bottom: 0.125rem solid transparent;
 }
 
 .menu-item:hover {
     transition: 0.3s;
-    border-bottom: 2px solid #1c1d1f;
+    border-bottom: 0.125rem solid #1c1d1f;
 }
 
 main {
     display: flex;
     flex-direction: column;
-    height: 85vh;
     justify-content: center;
+    padding-top: 1.5rem;
     align-items: center;
     border-top: 0.4px solid #1c1d1f;
 }
