--- a/css/lost-pass.css
+++ b/css/lost-pass.css
@@ -80,3 +80,27 @@ main {
     align-items: center;
     border-top: 0.4px solid #1c1d1f;
 }
+
+@media screen and (min-width: 0) and (max-width: 48em) {
+    .cabecalho-imagem img {
+        display: none;
+    }
+
+    .cabecalho-ham {
+        display: flex;
+    }
+
+    .cabecalho-menu {
+        width: 100%;
+        display: none;
+    }
+
+    .menu-item {
+        display: inline-block;
+        border-top: 0.4px solid #1c1d1f;
+    }
+
+    .menu-item:hover {
+        background-color: #fafafa;
+    }
+}
