--- a/css/responsive-menu.css
+++ b/css/responsive-menu.css
@@ -1,37 +1,34 @@
 @media screen and (min-width: 0) and (max-width: 48em) {
-    .cabecalho {
-        flex-direction: column;
-        align-items: initial;
-        padding: 0;
+    main {
+        border-top: 0;
     }
 
-    .cabecalho-imagem {
+    .cabecalho {
+        border-bottom: 0.4px solid #1c1d1f;
+        padding: 0.75rem;
+    }
+
+    .cabecalho-imagem img {
         display: none;
     }
 
     .cabecalho-ham {
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
-        padding: 0.25rem 0.75rem;
-        border-bottom: 0.4px solid #1c1d1f;
     }
 
     .cabecalho-menu {
+        width: 100%;
         display: none;
     }
 
     .menu-item {
-        display: block;
-        border-bottom: 0.4px solid #1c1d1f;
+        display: inline-block;
+        border-top: 0.4px solid #1c1d1f;
     }
 
     .menu-item:hover {
         background-color: #fafafa;
-        border-bottom: 0.4px solid #1c1d1f;
-    }
-
-    main {
-        border-top: 0;
+        border-bottom: 0;
     }
 }
