--- a/css/calendar.css
+++ b/css/calendar.css
@@ -81,18 +81,25 @@ main {
     border-top: 0.4px solid #1c1d1f;
 }
 
+section {
+    display: flex;
+    flex-direction: row;
+    gap: 1.25rem;
+    padding: 1.25rem;
+    border-radius: 0.75rem;
+}
+
 .calendario {
-    max-width: 22rem;
     display: flex;
     flex-direction: column;
     background-color: #fafafa;
-    border-radius: 10px;
+    border-radius: 0.75rem;
 }
 
 .calendario-cabecalho {
     display: flex;
     flex-direction: row;
-    padding: 25px 30px 10px;
+    padding: 1.625rem 1.875rem 0.625rem;
     justify-content: space-between;
 }
 
@@ -199,13 +206,14 @@ main {
 }
 
 .atividades {
-    background-color: #ffffff;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
+    background-color: #fafafa;
     padding: 1.25rem;
-    border-radius: 10px;
-    gap: 20px;
+    border-radius: 0.75rem;
+    gap: 1.25rem;
 }
 
 .atividades input {
@@ -221,25 +229,32 @@ main {
 }
 
 .atividades-totais {
-    background-color: #c9e939;
-    width: 100%;
-    height: 70%;
+    display: flex;
+    flex-direction: column;
 }
 
-section {
-    display: flex;
-    flex-direction: row;
-    background-image: linear-gradient(#1aa37a, #9dffb3);
-    padding: 1.25rem;
-    gap: 1.25rem;
-    max-height: 70vh;
-    max-width: 80vw;
+.atividade {
+    background-color: #9dffb3;
+    padding: 0.75rem;
     border-radius: 0.75rem;
-    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+    text-align: center;
+    font-size: 0.875rem;
 }
 
 @media screen and (min-width: 0) and (max-width: 48em) {
     section {
         flex-direction: column;
+    }
+
+    .calendario {
+        box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+    }
+
+    .atividades {
+        box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+    }
+
+    .conteudo-semanas li {
+        font-size: 0.8rem;
     }
 }
