--- a/css/calendars.css
+++ b/css/calendars.css
@@ -81,12 +81,19 @@ main {
     border-top: 0.4px solid #1c1d1f;
 }
 
-section {
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1.25rem;
+}
+
+.output-box {
     display: flex;
     flex-direction: row;
     gap: 1.25rem;
-    padding: 1.25rem;
-    border-radius: 0.75rem;
 }
 
 .calendario {
@@ -94,6 +101,88 @@ section {
     flex-direction: column;
     background-color: #fafafa;
     border-radius: 0.75rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+}
+
+.atividades {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fafafa;
+    padding: 1.25rem;
+    border-radius: 0.75rem;
+    gap: 1.25rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+}
+
+.input-box {
+    display: flex;
+    flex-direction: row;
+    gap: 1.25rem;
+    justify-content: center;
+}
+
+.criacao {
+    display: none;
+    flex-direction: column;
+    background-color: #fafafa;
+    border-radius: 0.75rem;
+    padding: 1.25rem;
+    gap: 1.25rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+}
+
+.turmas {
+    display: flex;
+    flex-direction: column;
+    background-color: #fafafa;
+    border-radius: 0.75rem;
+    padding: 1.25rem;
+    gap: 1.25rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+}
+
+.turmas-conteudo {
+    display: flex;
+    flex-direction: row;
+    gap: 1.25rem;
+    flex-wrap: wrap;
+}
+
+.turma {
+    display: flex;
+    flex-direction: column;
+    background-color: #cd426a;
+    width: 80px;
+    height: 80px;
+}
+
+.criacao-cabecalho {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.criacao-cabecalho ion-icon {
+    font-size: 1.875rem;
+    cursor: pointer;
+}
+
+.criacao-conteudo {
+    display: none;
+}
+
+.evento-conteudo input {
+    width: 100%;
+    height: 2.5rem;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #1c1d1f;
+    padding: 0 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    color: #373c4f
 }
 
 .calendario-cabecalho {
@@ -205,17 +294,6 @@ section {
     background-color: #dd88a0;
 }
 
-.atividades {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #fafafa;
-    padding: 1.25rem;
-    border-radius: 0.75rem;
-    gap: 1.25rem;
-}
-
 .atividades input {
     background-color: #cd426a;
     height: 2.75rem;
@@ -242,19 +320,23 @@ section {
 }
 
 @media screen and (min-width: 0) and (max-width: 48em) {
-    section {
+    .output-box {
         flex-direction: column;
     }
 
-    .calendario {
-        box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
-    }
-
-    .atividades {
-        box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+    .input-box {
+        flex-direction: column;
     }
 
     .conteudo-semanas li {
-        font-size: 0.8rem;
+        font-size: 0.875rem;
+    }
+
+    .conteudo-dias li {
+        font-size: 0.875rem;
+    }
+
+    .criacao {
+        width: 80%;
     }
 }
