--- a/css/spaces.css
+++ b/css/spaces.css
@@ -80,3 +80,76 @@ main {
     align-items: center;
     border-top: 0.4px solid #1c1d1f;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1.25rem;
+}
+
+.input-box {
+    display: flex;
+    flex-direction: row;
+    gap: 1.25rem;
+    justify-content: center;
+}
+
+.turmas {
+    display: flex;
+    flex-direction: column;
+    background-color: #fafafa;
+    border-radius: 0.75rem;
+    padding: 1.25rem;
+    gap: 1.25rem;
+    box-shadow: 0.375rem 0.375rem 0.625rem rgba(0, 0, 0, 0.274);
+    width: 600px;
+    align-items: center;
+}
+
+.turmas-cabecalho {
+    text-align: center;
+}
+
+.turmas-conteudo {
+    display: flex;
+    flex-direction: row;
+    gap: 1.25rem;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.turma {
+    display: flex;
+    flex-direction: column;
+    background-color: #1aa37a;
+    color: white;
+    font-weight: 600;
+    gap: 0.5rem;
+    width: 75px;
+    height: 75px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.75rem;
+}
+
+.turmas-acesso button {
+    background-color: #cd426a;
+    color: #fafafa;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    padding: 0 0.75rem;
+    border: none;
+    height: 2.5rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    text-align: center;
+}
+
+@media screen and (min-width: 0) and (max-width: 48em) {
+    .turmas {
+        width: initial;
+    }
+}
